--- a/app.css
+++ b/app.css
@@ -2,10 +2,10 @@
     text-align: center;
 }
 #buttonBox{
-    margin: 20px;
+    margin-top: 20px;
     text-align: center;
 }
 
 button{
-    margin-right: 10px;
+    margin-right: 5px;
 }
